--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <!--plugins versions-->
         <maven.compiler.version>3.10.1</maven.compiler.version>
         <maven.surefire.version>2.22.2</maven.surefire.version>
+        <maven.jar.version>3.2.2</maven.jar.version>
     </properties>
 
     <dependencies>
@@ -61,6 +62,22 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.version}</version>
+            </plugin>
+
+            <plugin>
+                <!-- Build an executable JAR -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>${maven.jar.version}</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>com.javadi.websitecrawler.App</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
             </plugin>
         </plugins>
     </build>
